--- a/tcc-rotavan/src/main/resources/application.properties
+++ b/tcc-rotavan/src/main/resources/application.properties
@@ -22,3 +22,5 @@ aws.region=us-east-1
 
 cloud.aws.credentials.access-key=${AWS_ACCESS_KEY:root}
 cloud.aws.credentials.secret-key=${AWS_SECRET_KEY:root}
+
+spring.flyway.baseline-on-migrate=true
