--- a/tcc-rotavan/src/main/resources/application.properties
+++ b/tcc-rotavan/src/main/resources/application.properties
@@ -24,3 +24,7 @@ cloud.aws.credentials.access-key=${AWS_ACCESS_KEY:root}
 cloud.aws.credentials.secret-key=${AWS_SECRET_KEY:root}
 
 spring.flyway.baseline-on-migrate=true
+
+# Usa uma variável de ambiente, assim como as outras.
+# O valor depois dos ':' é um 'default' caso a variável não exista.
+google.maps.api.key=${GOOGLE_MAPS_KEY:AIzaSyC7OKE1AZPNCqBjtna4MhMHV_cNHxtMhLQ}
